# talia

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  LOOP_STATE.md  README.md  pyproject.toml  talia.md
.github/workflows/: _debug-egress.yml  ci.yml  health-check.yml
data/: censimento_albi_pa_tp.csv  censimento_albi_pa_tp_COMPLETO.csv  comuni_sicilia.csv  registro_scraper.csv
data/corpus_normativo/nazionale/: dlgs-159-2011.md  dlgs-165-2001.md  dlgs-175-2016.md  dlgs-196-2003.md  dlgs-24-2023.md  dlgs-267-2000.md  dlgs-33-2013.md  dlgs-36-2023.md  dlgs-39-2013.md  l-190-2012.md  l-241-1990.md  l-287-1990.md
data/corpus_normativo/ue/: dir-2014-24-ue.md  dir-2019-1024-ue.md  dir-2019-1937-ue.md  gdpr-679-2016.md
data/samples/fascicolo_coerente/: 01_indizione.txt  02_annullamento.txt
data/samples/fascicolo_critico/: 01_indizione.txt  02_annullamento.txt
docs/: TODO.md  bugs.md
docs/analisi-kiro/: 01-analisi-funzionale.md  02-analisi-tecnica.md  03-architettura-aws.md  04-applicativo-utente.md  05-presentazione.md  06-prospetto-economico.md
docs/cards/: BOARD.md  TAL-1.md  TAL-10.md  TAL-11.md  TAL-12.md  TAL-13.md  TAL-14.md  TAL-2.md  TAL-20.md  TAL-21.md  TAL-22.md  TAL-23.md  TAL-24.md  TAL-3.md  TAL-30.md  TAL-4.md  TAL-40.md  TAL-41.md  TAL-42.md  TAL-43.md  TAL-44.md  TAL-45.md  TAL-46.md  TAL-47.md  TAL-48.md  TAL-49.md  TAL-5.md  TAL-50.md  TAL-51.md  TAL-52.md  TAL-6.md  TAL-7.md  TAL-8.md  TAL-9.md  _TEMPLATE.md
docs/wiki/: 00-home.md  01-visione-e-principi.md  02-architettura.md  03-stack.md  04-checklist-modulo1.md  05-red-flags-batch.md  06-corpus-normativo.md  07-fonti-dati.md  08-roadmap.md  09-avvertenze-legali.md  10-glossario.md  11-implementazione-motore.md  12-schema-db.md  13-scraper-status.md  14-censimento-albi.md  14-pdf-on-demand.md
notebooks/: copertura_scraper_sicilia.ipynb  mappa_copertura_sicilia.html
scripts/: _debug_egress.py  analisi_significativita.py  backfill_date_procedimenti.py  download_corpus_normativo.py  estrai_attori.py  health_check_registro.py  prepara_fascicoli_candidati.py  run_scrapers.py
src/talia/: __init__.py
src/talia/engine/: __init__.py  attori.py  catena.py  entita.py  fascicolo.py  firmatari.py  llm.py  models.py  pdf_text.py  rag.py
src/talia/engine/checklist/: __init__.py  base.py  check1_base_giuridica.py  check2_termini.py  check3_motivazione.py  check5_avvio.py  check6_firmatari.py  check7_gdpr.py
src/talia/modulo1_fascicolo/: __init__.py  analisi.py  cli.py  report.py
src/talia/modulo2_scraping/: __init__.py  db.py  pdf_download.py  registry.py  utils.py
src/talia/modulo3_dashboard/: __init__.py  app.py
tests/: test_analisi_llm.py  test_attori.py  test_backfill_date_procedimenti.py  test_catena.py  test_check3_motivazione.py  test_check5_avvio.py  test_check7_gdpr.py  test_checklist.py  test_classificazione.py  test_cli.py  test_dashboard.py  test_db.py  test_end_to_end.py  test_entita.py  test_firmatari.py  test_health_check.py  test_jcitygov.py  test_llm.py  test_pdf_download.py  test_pdf_text.py  test_prepara_fascicoli_candidati.py  test_rag.py  test_registry.py  test_report.py  test_run_scrapers_registry.py  test_smoke.py
tests/fonti/: test_agrigento.py  test_anac.py  test_catania.py  test_halley.py  test_hspromila.py  test_icity.py  test_palermo.py  test_portalepa.py  test_ribera.py  test_sambucadisicilia.py  test_siracusa.py  test_trapani.py  test_urbi.py
tests/fonti/fixtures/: anac_sample.csv  icity_dettaglio.html  icity_lista.html
tests/red_flags/: test_catena_revoca.py  test_concentrazione.py  test_frazionamento.py  test_riapertura_revoca.py  test_tempi_anomali.py
(+22 files in other folders)
